@@ -1,0 +1,2 @@
+Put in some collation stuff from later R Core releases, both for
+features, and for performance improvement.
